--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<receiver android:name=".StatusWidgetProvider" android:label="@string/app_name" >
+		<receiver android:name=".StatusWidgetProvider" android:label="@string/widget_name" >
 			<intent-filter>
 				<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
 			</intent-filter>
 			<meta-data android:name="android.appwidget.provider" android:resource="@xml/status_widget_info" />
 		</receiver>
-		
-		<service android:name=".StatusWidgetProvider$UpdateService" />
     </application>
 	
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
